kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: solar-system
  namespace: ${NAMESPACE}
spec:
    rules:
    - host: ${HOST_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: solar-system
                port:
                  number: 3000
